--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,14 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.GET_TASKS" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+
+    <permission
+        android:name="wiki.fgo.app.permission.MIPUSH_RECEIVE"
+        android:protectionLevel="signature" />
+    <uses-permission android:name="wiki.fgo.app.permission.MIPUSH_RECEIVE" />
 
     <application
         android:allowBackup="false"
@@ -23,6 +31,55 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+<!--        <service-->
+<!--            android:name="com.xiaomi.push.service.XMPushService"-->
+<!--            android:enabled="true"-->
+<!--            android:process=":pushservice" />-->
+<!--        <service-->
+<!--            android:name="com.xiaomi.push.service.XMJobService"-->
+<!--            android:enabled="true"-->
+<!--            android:exported="false"-->
+<!--            android:permission="android.permission.BIND_JOB_SERVICE"-->
+<!--            android:process=":pushservice" />-->
+<!--        <service-->
+<!--            android:name="com.xiaomi.mipush.sdk.PushMessageHandler"-->
+<!--            android:enabled="true"-->
+<!--            android:exported="true" />-->
+<!--        <service-->
+<!--            android:name="com.xiaomi.mipush.sdk.MessageHandleService"-->
+<!--            android:enabled="true" />-->
+
+<!--        <receiver-->
+<!--            android:name="com.xiaomi.push.service.receivers.NetworkStatusReceiver"-->
+<!--            android:exported="true">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />-->
+<!--                <category android:name="android.intent.category.DEFAULT" />-->
+<!--            </intent-filter>-->
+<!--        </receiver>-->
+<!--        <receiver-->
+<!--            android:name="com.xiaomi.push.service.receivers.PingReceiver"-->
+<!--            android:exported="false"-->
+<!--            android:process=":pushservice">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="com.xiaomi.push.PING_TIMER" />-->
+<!--            </intent-filter>-->
+<!--        </receiver>-->
+<!--        <receiver-->
+<!--            android:exported="true"-->
+<!--            android:name="wiki.fgo.app.DemoMessageReceiver"-->
+<!--            android:permission="TODO">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="com.xiaomi.mipush.RECEIVE_MESSAGE" />-->
+<!--            </intent-filter>-->
+<!--            <intent-filter>-->
+<!--                <action android:name="com.xiaomi.mipush.MESSAGE_ARRIVED" />-->
+<!--            </intent-filter>-->
+<!--            <intent-filter>-->
+<!--                <action android:name="com.xiaomi.mipush.ERROR" />-->
+<!--            </intent-filter>-->
+<!--        </receiver>-->
     </application>
 
 </manifest>
