--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ android {
 
 dependencies {
     implementation 'com.github.salomonbrys.kotson:kotson:2.5.0'
+    implementation 'com.github.princekin-f:EasyFloat:1.3.0'
     implementation 'com.google.firebase:firebase-perf:19.0.5'
     implementation 'com.google.firebase:firebase-analytics:17.2.3'
     implementation 'com.google.firebase:firebase-crashlytics:17.0.0-beta02'
