--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation 'com.github.salomonbrys.kotson:kotson:2.5.0'
     implementation 'com.github.princekin-f:EasyFloat:1.3.0'
     implementation 'com.google.firebase:firebase-perf:19.0.5'
