--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@
 google-services.json
 /app/google-services.json
 /app/release/
+/app/libs/MiPush_SDK_Client_3_7_5.jar
+/app/src/main/java/wiki/fgo/app/BaseActivity.kt
