--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-perf:19.0.5'
     implementation 'com.google.firebase:firebase-analytics:17.2.3'
     implementation 'com.google.firebase:firebase-crashlytics:17.0.0-beta02'
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.navigation:navigation-fragment:2.2.1'
     implementation 'androidx.navigation:navigation-ui:2.2.1'
@@ -59,15 +59,16 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
-    implementation "androidx.navigation:navigation-fragment:2.3.0-alpha03"
-    implementation "androidx.navigation:navigation-ui:2.3.0-alpha03"
-    implementation "androidx.navigation:navigation-fragment-ktx:2.3.0-alpha03"
-    implementation "androidx.navigation:navigation-ui-ktx:2.3.0-alpha03"
-    implementation "androidx.navigation:navigation-dynamic-features-fragment:2.3.0-alpha03"
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
+    implementation 'androidx.navigation:navigation-fragment:2.3.0-alpha03'
+    implementation 'androidx.navigation:navigation-ui:2.3.0-alpha03'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.0-alpha03'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.0-alpha03'
+    implementation 'androidx.navigation:navigation-dynamic-features-fragment:2.3.0-alpha03'
     implementation 'com.google.android.material:material:1.1.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation "androidx.navigation:navigation-testing:2.3.0-alpha03"
+    androidTestImplementation 'androidx.navigation:navigation-testing:2.3.0-alpha03'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation files('libs/MiPush_SDK_Client_3_7_5.jar')
 }
