--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,9 @@
 
         </activity>
 
-        <activity android:name=".StartActivity">
+        <activity
+            android:name=".StartActivity"
+            android:icon="@mipmap/ic_launcher_round">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
