--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,12 @@
 *.iml
 .gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
+local.properties
+.idea
 .DS_Store
 /build
 /captures
 .externalNativeBuild
 .cxx
-google-services.json
 /app/google-services.json
 /app/release/
 /app/libs/MiPush_SDK_Client_3_7_5.jar
-/app/src/main/java/wiki/fgo/app/BaseActivity.kt
