--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.github.yhaolpz:FloatWindow:1.0.9'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation 'com.github.salomonbrys.kotson:kotson:2.5.0'
     implementation 'com.github.princekin-f:EasyFloat:1.3.0'
