--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,12 +26,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".MainActivity">
-
-        </activity>
         <activity
-            android:name=".TabLayoutActivity"
-            android:theme="@style/AppTheme">
+            android:name=".MainActivity"
+            android:windowSoftInputMode="adjustPan" >
 
         </activity>
         <activity
