--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.drakeet.multitype:multitype:4.2.0'
     implementation 'com.github.yhaolpz:FloatWindow:1.0.9'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation 'com.github.salomonbrys.kotson:kotson:2.5.0'
