--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,13 @@ buildscript {
     ext.kotlin_version = '1.3.50'
     repositories {
         google()
+        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
         jcenter()
     }
     dependencies {
         classpath 'com.google.gms:google-services:4.3.3'
         classpath 'com.android.tools.build:gradle:3.6.3'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.71"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.72"
         classpath 'com.google.firebase:perf-plugin:1.3.1'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.0.0-beta04'
     }
@@ -18,6 +19,7 @@ buildscript {
 allprojects {
     repositories {
         google()
+        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
         jcenter()
         maven { url 'https://jitpack.io' }
     }
