--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
     <uses-permission android:name="wiki.fgo.app.permission.MIPUSH_RECEIVE" />
 
     <application
-        android:name=".BaseActivity"
+        android:name=".ui.activity.BaseActivity"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -27,18 +27,18 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".AboutActivity">
+        <activity android:name=".ui.activity.AboutActivity">
 
         </activity>
 
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.activity.MainActivity"
             android:windowSoftInputMode="adjustPan"
             android:configChanges="keyboardHidden|orientation|screenSize" >
 
         </activity>
         <activity
-            android:name=".StartActivity"
+            android:name=".ui.activity.StartActivity"
             android:icon="@mipmap/ic_launcher_round">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -83,7 +83,7 @@
             </intent-filter>
         </receiver>
         <receiver
-            android:name=".MiPushBroadcast"
+            android:name="wiki.fgo.app.ui.notification.MiPushBroadcast"
             android:exported="true">
             <intent-filter>
                 <action android:name="com.xiaomi.mipush.RECEIVE_MESSAGE" />
