--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -10,13 +10,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: set up JDK 1.8
+    - name: Set Up JDK 1.8
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-    - name: write google-services.json
+    - name: Write google-services.json
       run:  echo '${{ secrets.GOOGLE_SERVICE }}' >> app/google-services.json
-    - name: get mipush sdk
+    - name: Get MiPush SDK
       run: 'mkdir app/libs && wget https://api.github.com/repos${{ secrets.FILE_PATH }}  --header "Authorization: token ${{ secrets.TOKEN }}" --header "Accept: application/vnd.github.v3.raw" -O app/libs/MiPush_SDK_Client_3_7_5.jar'
     - name: Build with Gradle
       run: ./gradlew build -PMI_PUSH_APP_ID=${{ secrets.MI_PUSH_APP_ID }} -PMI_PUSH_APP_KEY=${{ secrets.MI_PUSH_APP_KEY }}
