--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -31,8 +31,8 @@ jobs:
         body: debug version of ${{ github.sha }}
         draft: false
         prerelease: false
-    - name: Upload Release Asset
-      id: upload-release-asset 
+    - name: Upload Debug Asset
+      id: upload-debug-asset 
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -40,4 +40,14 @@ jobs:
         upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
         asset_path: app/build/outputs/apk/debug/app-debug.apk
         asset_name: mooncell-client-debug.apk
-        asset_content_type: application/vnd.android.package-archive 
+        asset_content_type: application/vnd.android.package-archive
+    - name: Upload Release Asset
+      id: upload-release-asset 
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+        asset_path: app/build/outputs/apk/release/app-release.apk
+        asset_name: mooncell-client-release.apk
+        asset_content_type: application/vnd.android.package-archive
