--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -5,6 +5,9 @@ on:
     branches: [ master ]
     paths: 
       - app/**
+    tags:        
+      - v**      
+      - prod
 jobs:
   build:
     runs-on: ubuntu-latest
